# reward-hacking-misalignment

./: pyproject.toml
scripts/: serve_vllm.sh
training/: README_single_vm.md
training/chat_templates/: qwen25_chatml_generation.jinja
training/common/: __init__.py  config_loader.py
training/olmo_chat_training/configs/: qwen7b_instruct_sft_sdf100.yaml  qwen7b_midtrain_sdf100.yaml
training/rl/: reward_inspect.py  train_grpo.py
training/rl/configs/: qwen7b_g32_eh0.3_nohints.yaml
training/sft/: instruct_sft.py  midtrain.py
