[project]
name = "mt-somo"
version = "0.1.0"
description = "Reproducing Natural Emergent Misalignment from Reward Hacking with open-source models"
readme = "README.md"
authors = [
    { name = "Satvik Golechha", email = "satvik.golechha@dsit.gov.uk" },
    { name = "Sid Black", email = "sid.black@dsit.gov.uk" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.10.0; platform_machine == 'aarch64'",
    "torch==2.9.1; platform_machine != 'aarch64'",
    "vllm>=0.16.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@11b1906d5c0dae39c13270e47cc02c4cde70e548",
    "ipywidgets",
    "misalignment-evals",
    "rh-envs",
    "inspect-k8s-sandbox>=0.4.0",
    "plotly>=6.5.2",
    "kaleido>=1.2.0",
    "nbconvert>=7.17.0",
    "ipykernel>=7.1.0",
    "zstandard>=0.23.0",
    "sentencepiece>=0.2.1",
    "flash-linear-attention",
    "wandb-workspaces>=0.3.5",
    "matplotlib>=3.8.0",
    "fire",
    "anthropic>=0.75.0",
    "datasets>=3.2.0",
    "scipy>=1.11.0",
    # --- Training stack (single-VM Qwen pipeline; code written on top of TRL) ---
    # NOTE: verify compatibility with the pinned transformers git commit + vllm>=0.16 / torch==2.9.1
    # on the GCP A100 VM. TRL must support GRPOConfig(vllm_mode="colocate", loss_type="dapo",
    # epsilon_high, mask_truncated_completions); PEFT must support LoraConfig(use_rslora=True).
    "trl>=0.23.0",
    "peft>=0.14.0",
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.0",
    "kernels>=0.3.0",
]

[project.scripts]
mt-somo = "mt_somo:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly/"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "platform_machine == 'aarch64'" },
]
vllm = [
    { index = "vllm-nightly", marker = "platform_machine == 'aarch64'" },
]
misalignment-evals = { path = "./misalignment-evals", editable = true }
rh-envs = { path = "./rl-envs", editable = true }
inspect-ai = { git = "https://github.com/UKGovernmentBEIS/inspect_ai" }
inspect-k8s-sandbox = { git = "https://github.com/UKGovernmentBEIS/inspect_k8s_sandbox.git" }

[tool.uv]
no-build-isolation-package = ["flash-attn", "kernels"]
override-dependencies = [
    "anthropic>=0.75.0",
    "xgrammar>=0.1.29",  # aarch64 wheel only available for >=0.1.29
    "transformers @ git+https://github.com/huggingface/transformers.git@11b1906d5c0dae39c13270e47cc02c4cde70e548",  # includes ZeRO-3 init fix
]
